Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7190

Opengl2 paint engine doesn't render text correctly over semi-transparent surfaces.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.6.3
    • 4.6.0
    • GUI: OpenGL, GUI: Painting
    • None
    • Fedora 12, Windows 7.
      nvidia cars on both machines.
      Qt 4.6.0 and the latest 4.6.1 from git
    • eb84acd899aee992f5631ee0b9c0d992c8fbbd5a, 48b4a790b94acab1000c0e3bb3c6780bf6b9ba0b, 6a8a8f851edbc9b93948bf88d8c792e1c5dfda35, c82bb3f049793d42e0589521c42576c2a95b2661, f42ad9029816891fd5c603b0fa6259e758db0e07

    Description

      See attached screenshots. "opengl1.png" displays the correct behavior, and "opengl2.png" shows the bug. Note the blocks of non-transparent color around the glyphs. Note also that the rendering of the semi-transparent blue rectangle is darker in the opengl2 version, even though the only difference is the paint engine.

      I arrived at this bug by creating a subclass of QFrame and overriding paintEvent to draw a translucent image instead of the normal frame. I then subclassed the resulting widget and added a QLabel over top of it.

      Attachments

        1. opengl1.png
          78 kB
          Bart Kelsey
        2. opengl2.png
          75 kB
          Bart Kelsey
        3. testcase.zip
          51 kB
          Bart Kelsey
        4. framebufferobject.7z
          51 kB
          Andy Shaw (closed Nokia identity)

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kkalland Kim Motoyoshi Kalland (Inactive)
              lendrick Bart Kelsey
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes