Fixed subpixel antialiased text drawing with the GL2 engine.

Fixed bug where drawing subpixel antialiased glyphs on a
translucent surface would cause all the pixels in the glyphs'
bounding box to become opaque.

Task-number: QTBUG-7190
Reviewed-by: Trond